# issue-bevy-with-lazy-routes

./: .gitignore  Cargo.toml  README.md  justfile
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/components/: bevy_canvas.rs  mod.rs
src/app/pages/: about.rs  home.rs
style/: main.css
