[package]
name = "issue-bevy-with-lazy-routes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos core dependencies
leptos = { version = "0.8.6", features = ["nightly"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.5", features = ["nightly"] }
leptos_axum = { version = "0.8.5", optional = true }
server_fn = { version = "0.8.5" }

# Bevy and canvas integration
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit", 
    "bevy_core_pipeline", 
    "bevy_render", 
    "bevy_asset", 
    "bevy_sprite",
    "webgl2",
    "png",
    "bevy_image",
], optional = true }
leptos-bevy-canvas = { version = "0.3.0", optional = true }

# Server dependencies
axum = { version = "0.8.4", optional = true, features = ["macros"] }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# Client/Server shared
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cfg-if = "1"

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:bevy",
    "dep:leptos-bevy-canvas",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.leptos]
name = "issue-bevy-with-lazy-routes"
site-root = "site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
# hash-files = true
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"